[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wheelz_idp_validations"]


[project]
name = "wheelz_idp_validations"
version = "2.2.5"
authors = [
  { name="Lluis" },
]
description = "Validation for spasnish documents"
readme = "readme.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/albertvazquezm/wheelz-idp-validations"
Issues = "https://github.com/albertvazquezm/wheelz-idp-validationsissues"
